--- a/servicos.html
+++ b/servicos.html
@@ -1,55 +1,258 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Serviços - Mundo Pet</title>
-    </head>
-    
-    <body>
-        <header>
-            <h1>Nossos Serviços - Mundo Pet</h1>
-            <nav>
-                <a href="index.html">Início</a> |
-                <a href="produtos.html">Produtos</a> |
-                <a href="servicos.html">Serviços</a>
-            </nav>
-        </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Serviços - Mundo Pet</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/png" href="images/favicon.ico" />
+  </head>
 
-        <main>
-            <section>
-                <h2>Cuidando do seu Melhor Amigo</h2>
-                <p>Oferecemos serviços de alta qualidade para garantir o
-                    bem-estar e a higiene do seu pet.</p>
+  <body>
+    <header class="main-header sticky-top">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"
+            ><i class="bi bi-heart-pulse-fill"></i> Mundo Pet</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Início</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="produtos.html">Produtos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="servicos.html">Serviços</a>
+              </li>
+            </ul>
+            <div class="header-actions">
+              <a href="cadastro.html" class="btn btn-outline-primary"
+                >Cadastre-se</a
+              >
+              <a href="login.html" class="btn btn-primary">Entrar</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-                <article>
-                    <h3>Banho e Tosa Higiênica</h3>
-                    <p>Um banho relaxante com os melhores produtos do mercado,
-                        seguido de uma tosa higiênica completa para manter seu
-                        pet limpo e confortável.</p>
-                    <p><strong>Valor:</strong> R$ 80,00</p>
-                </article>
+    <main>
+      <!-- Seção Hero -->
+      <div class="container my-5">
+        <section class="row align-items-center service-hero">
+          <div class="col-lg-6 text-center text-lg-start">
+            <h1 class="display-4 fw-bold">Banho & Tosa</h1>
+            <p class="lead my-4">
+              Mais que um serviço, um ato de carinho. Cuidado completo para a
+              saúde e bem-estar do seu melhor amigo.
+            </p>
+            <a href="#agendamento" class="btn btn-primary btn-lg"
+              >Agendar um Horário</a
+            >
+          </div>
+          <div class="col-lg-6 d-none d-lg-block">
+            <img
+              src="images/banner-services-hero.jpg"
+              class="img-fluid rounded-3"
+              alt="Ilustração de um cão feliz após o banho." />
+          </div>
+        </section>
+      </div>
 
-                <hr>
+      <!-- Seção de Recomendação -->
+      <div class="container my-5 py-5 service-benefits-section">
+        <div class="row align-items-center g-5">
+          <div class="col-lg-5">
+            <img
+              src="https://placehold.co/450x450/F8F9FA/212529?text=Cuidado+e+Confiança"
+              class="img-fluid rounded-3"
+              alt="Profissional cuidando de um cão de porte pequeno com carinho." />
+          </div>
+          <div class="col-lg-7">
+            <h2 class="page-title mb-4">
+              A higiene profissional é indicada por veterinários
+            </h2>
+            <ul class="feature-list">
+              <li>
+                <i class="bi bi-check2-circle icon"></i>
+                <div>
+                  <strong>Saúde da Pele e Pelo:</strong> O banho correto com
+                  produtos adequados é um aliado crucial no tratamento de
+                  doenças de pele.
+                </div>
+              </li>
+              <li>
+                <i class="bi bi-check2-circle icon"></i>
+                <div>
+                  <strong>Prevenção:</strong> A tosa higiênica facilita a
+                  limpeza diária do pet e evita a contaminação do ambiente.
+                </div>
+              </li>
+              <li>
+                <i class="bi bi-check2-circle icon"></i>
+                <div>
+                  <strong>Conforto e Bem-estar:</strong> A escovação
+                  profissional remove nós dolorosos e reduz a queda de pelos
+                  pela casa.
+                </div>
+              </li>
+              <li>
+                <i class="bi bi-check2-circle icon"></i>
+                <div>
+                  <strong>Harmonia no Lar:</strong> Um pet limpo e bem cuidado
+                  mantém a pelagem saudável, evita maus cheiros e fortalece os
+                  laços com a família.
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-                <article>
-                    <h3>Serviço de Tele-Busca</h3>
-                    <p>Não tem tempo de trazer seu pet? Nós buscamos e levamos
-                        ele de volta em segurança! Com nosso serviço de
-                        tele-busca, seu amigo recebe todo o cuidado sem que você
-                        precise sair de casa.</p>
-                    <p><strong>Valor:</strong> Adicional de R$ 20,00 sobre o
-                        valor do serviço contratado.</p>
-                </article>
-            </section>
-        </main>
+      <!-- Seção Etapas do Serviço -->
+      <div class="container my-5 py-5 text-center bg-light rounded-3">
+        <h2 class="page-title mb-5">Conheça as etapas do nosso banho</h2>
+        <div class="row g-4">
+          <div class="col-lg-3 col-md-6">
+            <div class="step-card">
+              <div class="icon"><i class="bi bi-droplet-half"></i></div>
+              <h5>Banho Relaxante</h5>
+              <p>
+                Com produtos hipoalergênicos e adequados para cada tipo de
+                pelagem.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="step-card">
+              <div class="icon"><i class="bi bi-wind"></i></div>
+              <h5>Secagem Segura</h5>
+              <p>
+                Temperatura e ruído controlados para não causar estresse e
+                proteger a pele.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="step-card">
+              <div class="icon"><i class="bi bi-brush"></i></div>
+              <h5>Escovação Profunda</h5>
+              <p>
+                Remoção de pelos mortos, desembaraço e estímulo à circulação
+                sanguínea.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="step-card">
+              <div class="icon"><i class="bi bi-gem"></i></div>
+              <h5>Finalização e Perfume</h5>
+              <p>
+                Limpeza de ouvidos, corte de unhas e uma fragrância suave para
+                finalizar.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <br>
+      <!-- Seção de Agendamento -->
+      <div class="container my-5 py-5" id="agendamento">
+        <div class="access-card col-lg-8 mx-auto">
+          <div class="text-center">
+            <h2 class="page-title mb-2">Agende o horário do seu pet</h2>
+            <p class="lead text-muted mb-4">
+              Preencha os dados abaixo e nossa equipe entrará em contato para
+              confirmar.
+            </p>
+          </div>
+          <form id="schedulingForm">
+            <div class="mb-3">
+              <label for="service" class="form-label fw-bold"
+                >Escolha o Serviço Principal:</label
+              >
+              <select class="form-select form-select-lg" id="service" required>
+                <option value="" selected disabled>
+                  Selecione um serviço...
+                </option>
+                <option value="Banho e Tosa Higiênica">
+                  Banho e Tosa Higiênica (Completo)
+                </option>
+                <option value="Apenas Banho">Apenas Banho</option>
+              </select>
+            </div>
+            <div class="mb-4">
+              <label class="form-label fw-bold">Método de Entrega:</label>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="deliveryMethod"
+                  id="local"
+                  value="Entrega no Local"
+                  checked />
+                <label class="form-check-label" for="local"
+                  >Vou levar meu pet ao local</label
+                >
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="deliveryMethod"
+                  id="telebusca"
+                  value="Tele-Busca (+ R$ 20,00)" />
+                <label class="form-check-label" for="telebusca"
+                  >Quero contratar a Tele-Busca</label
+                >
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="appointmentDate" class="form-label fw-bold"
+                >Escolha o dia e horário:</label
+              >
+              <input
+                type="datetime-local"
+                class="form-control form-control-lg"
+                id="appointmentDate"
+                required />
+            </div>
+            <button type="submit" class="btn btn-primary w-100 btn-lg mt-4">
+              Solicitar Agendamento
+            </button>
+          </form>
+        </div>
+      </div>
+    </main>
 
-        <footer>
-            <p>Mundo Pet - Todos os direitos reservados - 2025.</p>
-            <p>Contato: (11) 1234-5678 | email: contato@mundopet.com</p>
-            <p>Site desenvolvido por: Wendell de Souza Dorta</p>
-        </footer>
-    </body>
+    <footer class="bg-dark text-white py-4 mt-5">
+      <div class="container text-center">
+        <p>
+          &copy; 2025 Mundo Pet. Todos os direitos reservados. Desenvolvido por
+          Wendell de Souza Dorta.
+        </p>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
