chore(assets): substitui imagens por PNGs e revisa acessibilidade
- Substitui arquivos JPG por PNGs de alta resolução baixados diretamente do gerador.
- Atualiza descrições 'alt' para maior precisão semântica e inclusão.
- Adiciona imagem de destaque na página de serviços (servicos.html).

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
             <div
               class="header-actions d-flex flex-column flex-lg-row align-items-stretch mt-3 mt-lg-0">
-              <a href="cadastro.html" class="btn btn-outline-primary mb-2 mb-lg-0"
+              <a
+                href="cadastro.html"
+                class="btn btn-outline-primary mb-2 mb-lg-0"
                 >Cadastre-se</a
               >
               <a href="login.html" class="btn btn-primary">Entrar</a>
@@ -86,9 +88,9 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="images/carousel-home-welcome.jpg"
+                src="images/carousel-home-welcome.png"
                 class="d-block w-100"
-                alt="Um cão e um gato brincando juntos em um ambiente ensolarado e feliz." />
+                alt="Um cachorro Golden Retriever e um gato laranja descansando juntos e aconchegados no braço de um sofá bege." />
               <div class="carousel-caption">
                 <h1 class="display-4 fw-bolder">
                   Cuidado e carinho em um só lugar
@@ -105,9 +107,10 @@
 
             <div class="carousel-item">
               <img
-                src="images/carousel-home-products.jpg"
+                src="images/carousel-home-products.png"
                 class="d-block w-100"
-                alt="Prateleira de uma loja com diversas rações e brinquedos para pets." />
+                alt="Uma mesa de madeira exibindo uma seleção de produtos premium: um pacote de ração orgânica,
+                 um frasco de shampoo, uma coleira azul escura e um brinquedo mordedor." />
               <div class="carousel-caption">
                 <h1 class="display-4 fw-bolder">
                   As melhores marcas com entrega rápida
@@ -124,9 +127,9 @@
 
             <div class="carousel-item">
               <img
-                src="images/carousel-home-services.jpg"
+                src="images/carousel-home-services.png"
                 class="d-block w-100"
-                alt="Um cão da raça Golden Retriever sendo tosado por um profissional." />
+                alt="Uma profissional sorridente escovando um grande cão branco e peludo sobre uma mesa de tosa em um ambiente limpo." />
               <div class="carousel-caption">
                 <h1 class="display-4 fw-bolder">
                   Agende o Banho & Tosa do seu pet
@@ -307,9 +310,10 @@
           </div>
           <div class="col-lg-5 d-none d-lg-block">
             <img
-              src="images/banner-home-grooming.jpg"
+              src="images/banner-home-grooming.png"
               class="img-fluid rounded-4"
-              alt="Ilustração de um cão relaxando durante o banho." />
+              alt="Um cão da raça Poodle com a tosa impecável e pelo marrom, sentado elegantemente sobre um
+               banquinho de madeira após o serviço de banho e tosa." />
           </div>
         </div>
       </section>
