--- a/servicos.html
+++ b/servicos.html
@@ -70,9 +70,9 @@
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="images/banner-services-hero.jpg"
+              src="images/banner-services-hero.png"
               class="img-fluid rounded-3"
-              alt="Ilustração de um cão feliz após o banho." />
+              alt="Close-up do rosto de um cão Cavalier King Charles Spaniel molhado e com espuma na cabeça durante o banho." />
           </div>
         </section>
       </div>
@@ -82,9 +82,10 @@
         <div class="row align-items-center g-5">
           <div class="col-lg-5">
             <img
-              src="https://placehold.co/450x450/F8F9FA/212529?text=Cuidado+e+Confiança"
+              src="images/banner-services-vet-care.png"
               class="img-fluid rounded-3"
-              alt="Profissional cuidando de um cão de porte pequeno com carinho." />
+              alt="ma veterinária sorridente em um consultório, examinando com carinho um pequeno cão branco
+               e fofo sobre a mesa de atendimento." />
           </div>
           <div class="col-lg-7">
             <h2 class="page-title mb-4">
